[gd_scene load_steps=19 format=3 uid="uid://bs8xix3hf7n2w"]

[ext_resource type="Script" path="res://assets/scenes/levels/level.gd" id="1_7dijh"]
[ext_resource type="PackedScene" uid="uid://cjl612uk13l3v" path="res://assets/scenes/game_ui/game_ui.tscn" id="2_eqvbm"]
[ext_resource type="PackedScene" uid="uid://bmxh6e1qe603l" path="res://assets/scenes/levels/resources/summoning_portal.tscn" id="3_0gl3x"]
[ext_resource type="Script" path="res://assets/scenes/levels/paths_container.gd" id="4_nfesq"]
[ext_resource type="Script" path="res://assets/scenes/map/map_path_2d.gd" id="5_6eso4"]
[ext_resource type="Script" path="res://assets/scenes/levels/wave_container.gd" id="6_ico6s"]
[ext_resource type="PackedScene" uid="uid://rxgop86p7c3i" path="res://assets/scenes/levels/wave.tscn" id="7_w0f7k"]
[ext_resource type="Texture2D" uid="uid://ci1grjbtj2gor" path="res://assets/sprites/environment/corn-maze/corn-tile-map.png" id="8_4fu1y"]

[sub_resource type="Curve2D" id="Curve2D_j7m6a"]
_data = {
"points": PackedVector2Array(0, 0, 2.08165e-12, 2.08165e-12, 2.08165e-12, 416, 0, 0, 0, 0, 158.518, 415, 0, 0, 0, 0, 192.618, 416)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_hkp0v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 190.775, 417, 0, 0, 0, 0, 326.252, 610, 0, 0, 0, 0, 478.319, 608, 0, 0, 0, 0, 635.915, 420)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_y8t03"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 188.931, 416, 0, 0, 0, 0, 331.782, 225, 0, 0, 0, 0, 475.554, 227, 0, 0, 0, 0, 634.072, 418)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_l8qrv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 634.072, 416, 0, 0, 0, 0, 806.414, 227, 0, 0, 0, 0, 955.716, 228, 0, 0, 0, 0, 1105.02, 413)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_ffffa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 634.072, 421, 0, 0, 0, 0, 797.198, 611, 0, 0, 0, 0, 952.03, 614, 0, 0, 0, 0, 1105.94, 415)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_3b7gb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1104.1, 411, 0, 0, 0, 0, 1277.36, 232, 0, 0, 0, 0, 1421.13, 235, 0, 0, 0, 0, 1550.16, 416)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_0i5he"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1103.18, 412, 0, 0, 0, 0, 1281.97, 611, 0, 0, 0, 0, 1413.76, 612, 0, 0, 0, 0, 1556.61, 422)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_qb4w8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1696, 416, 0, 0, 0, 0, 1920, 416)
}
point_count = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ccscc"]
texture = ExtResource("8_4fu1y")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_5ftcq"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ccscc")

[node name="Level" type="Node2D" node_paths=PackedStringArray("first_path_segment")]
script = ExtResource("1_7dijh")
first_path_segment = NodePath("PathsContainer/Starting Path")

[node name="GameUI" parent="." instance=ExtResource("2_eqvbm")]

[node name="SummoningPortal" parent="." instance=ExtResource("3_0gl3x")]
z_index = 1

[node name="PathsContainer" type="Node2D" parent="."]
z_index = 21
script = ExtResource("4_nfesq")

[node name="Starting Path" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_j7m6a")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../c1L"), NodePath("../c1U")]

[node name="c1L" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_hkp0v")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../c2U"), NodePath("../c2L")]

[node name="c1U" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_y8t03")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../c2U"), NodePath("../c2L")]

[node name="c2U" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_l8qrv")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../c3U"), NodePath("../c3L")]

[node name="c2L" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_ffffa")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../c3U"), NodePath("../c3L")]

[node name="c3U" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_3b7gb")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../Final Path")]

[node name="c3L" type="Path2D" parent="PathsContainer" node_paths=PackedStringArray("child_paths")]
scale = Vector2(1.08505, 1)
curve = SubResource("Curve2D_0i5he")
script = ExtResource("5_6eso4")
child_paths = [NodePath("../Final Path")]

[node name="Final Path" type="Path2D" parent="PathsContainer"]
curve = SubResource("Curve2D_qb4w8")
script = ExtResource("5_6eso4")
is_ending_path = true

[node name="WaveContainer" type="Node2D" parent="."]
script = ExtResource("6_ico6s")

[node name="Wave" parent="WaveContainer" instance=ExtResource("7_w0f7k")]
base_number_of_patrons = 10
length_of_time_in_seconds = 30

[node name="FreeMovingMonsters" type="Node2D" parent="."]
z_index = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5ftcq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 65536, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 65536, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 65536, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 65536, 0, 393219, 65536, 0, 458755, 65536, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 0, 0, 458756, 65536, 0, 524292, 65536, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 65536, 0, 589829, 65536, 0, 655365, 0, 0, 720901, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 65536, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 65536, 0, 655366, 0, 0, 720902, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 65536, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 65536, 0, 655367, 0, 0, 720903, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 65536, 0, 262152, 65536, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 65536, 0, 589832, 65536, 0, 655368, 0, 0, 720904, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 0, 0, 458761, 65536, 0, 524297, 65536, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 65536, 0, 393226, 65536, 0, 458762, 65536, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 65536, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 0, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 65536, 0, 589837, 65536, 0, 655373, 0, 0, 720909, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 65536, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 65536, 0, 655374, 0, 0, 720910, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 65536, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 65536, 0, 655375, 0, 0, 720911, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 65536, 0, 262160, 65536, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 65536, 0, 589840, 65536, 0, 655376, 0, 0, 720912, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 0, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 65536, 0, 393234, 65536, 0, 458770, 65536, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 65536, 0, 393235, 65536, 0, 458771, 65536, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 65536, 0, 327700, 65536, 0, 393236, 0, 0, 458772, 65536, 0, 524308, 65536, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 65536, 0, 262165, 65536, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 65536, 0, 589845, 65536, 0, 655381, 0, 0, 720917, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 65536, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 65536, 0, 655382, 0, 0, 720918, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 65536, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 65536, 0, 655383, 0, 0, 720919, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 65536, 0, 262168, 65536, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 65536, 0, 589848, 65536, 0, 655384, 0, 0, 720920, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 65536, 0, 327705, 65536, 0, 393241, 0, 0, 458777, 65536, 0, 524313, 65536, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 26, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 65536, 0, 393242, 65536, 0, 458778, 65536, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 27, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 65536, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 28, 0, 0, 65564, 0, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 65536, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 0, 0, 29, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 0, 0, 327709, 0, 0, 393245, 65536, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 0, 0, 393246, 65536, 0)

[node name="WaveCooldown" type="Timer" parent="."]
wait_time = 5.0

[connection signal="wave_complete" from="WaveContainer" to="." method="_on_wave_container_wave_complete"]
